# tfhe_rnns_mnist

./: .gitignore  Cargo.toml  README.md
mnist_preprocessed/: README.md
src/: main.rs  mnist_rnn.rs  utils.rs
src/utils/: common.rs  datasets.rs  init.rs  keys.rs  layers.rs  luts.rs
