[package]
name = "tfhe_rnns_mnist"
version = "1.0.0"
edition = "2021"

[dependencies]
concrete-core = {git = "https://github.com/irskid5/concrete-core.git", features=["x86_64-cuda"]}

bincode = "1.3.3"
colored = "2.0.0"
lazy_static = "1.4.0"
ndarray = {version="0.15.6", features = ["std", "serde", "rayon"]}
npyz = {version = "0.7.3", features = ["derive", "npz"]}
num = "0.4.0"
hdf5 = "0.8.1"
time-graph = {version="0.3.0", features = ["json", "table"]}
ndarray-stats = "0.5.1"
ndarray-npy = "0.8.1"
indicatif = {version="0.17.3", features = ["rayon"]}
rayon = "1.7.0"
rand = "0.8.5"
csv = "1.2.1"
serde = { version = "1", features = ["derive"] }

# [profile.release]
# debug = true